<resources>
    <string name="app_name">Delivarius</string>
    <string name="login_hint">Login</string>
    <string name="app_subtitle">App de compras para delivery</string>
    <string name="password_hint">Senha</string>
    <string name="login_button">Entrar</string>
    <string name="register_button">Cadastre-se</string>
    <string name="remember_checkbox">Lembrar-me</string>
    <string name="create_account_text">Criar conta</string>
    <string name="register_button_action">Cadastrar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="name">Nome:</string>
    <string name="email">Email:</string>
    <string name="birth_date_label">Data Nasc.:</string>
    <string name="phone_label">Telefone</string>
    <string name="next_button_action">Próximo</string>
    <string name="login_label_register">Login:</string>
    <string name="name_hint_register">Ex.: João Silva</string>
    <string name="email_hint_register">Ex.: joao.silva@gmail.com</string>
    <string name="login_hint_register">Ex.: joao.silva</string>
    <string name="password_label_register">Senha:</string>
    <string name="phone_hint_register">Ex.: (84) 996021235</string>
    <string name="birthdate_hint_register">Ex.: 01/02/1990</string>
    <string name="previous_button_action">Anterior</string>
    <string name="street_label_register">Endereço:</string>
    <string name="street_hint_register">Ex.: Av. Salgado Filho, 299, Lagoa Nova</string>
    <string name="reference_label_register">Referência:</string>
    <string name="reference_hint_register">Ex.: Próx. à farmácia...</string>
    <string name="zipcode_label_register">CEP:</string>
    <string name="zipcode_hint_register">Ex.: 59076-4000</string>
    <string name="city_label_register">Cidade:</string>
    <string name="city_hint_register">Ex.: Natal, RN</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="fail_create_user">Falha ao criar o usuário. Favor tentar novamento mais tarde.</string>
    <string name="success_create_user">Usuário cadastrado com sucesso. Agora é só fazer o login e começar a usar o app :)</string>
    <string name="registration_canceled">Cadastro cancelado</string>
    <string name="cancel_registration_dialog_message">Deseja realmente cancelar o cadastro?</string>
    <string name="registering_user_message_progress">Cadastrando usuário...</string>
    <string name="cart_menu_label">Carrinho</string>
    <string name="search_products_menu_label">Buscar produtos</string>
    <string name="orders_menu_label">Pedidos</string>
    <string name="messages_menu_label">Mensagens</string>
    <string name="edit_account_menu_label">Editar conta</string>
    <string name="help_menu_label">Ajuda</string>
    <string name="login_message_progress">Fazendo login...</string>
    <string name="login_failed_message">Falha no login. Login ou senha incorreta.</string>
    <string name="login_password_empty_error">Login e senha não podem ser vazios</string>
    <string name="logout">Sair</string>
    <string name="logout_message_dialog">Deseja realmente sair?</string>
    <string name="personal_info_edit_menu_label">Info. pessoais</string>
    <string name="contact_edit_menu_label">Contato</string>
    <string name="password_edit_menu_label">Senha</string>
    <string name="address_edit_menu_label">Endereço</string>
    <string name="delete_account_edit_menu">Remover Conta</string>
    <string name="back_edit_menu_label">Voltar</string>
    <string name="update_button_action">Atualizar</string>
    <string name="success_update_user">Usuário atualizado com sucesso</string>
    <string name="fail_update_user">Falha ao atualizar o usuário</string>
    <string name="success_delete_user">Conta deletada com sucesso</string>
    <string name="fail_delete_user">Falha ao deletar conta</string>
    <string name="delete_user_message_dialog">Deseja realmente deletar a conta?</string>
    <string name="deleting_user_message_progress">Deletando a conta...</string>
    <string name="connetion_server_failed">Conexão com o servidor falhou</string>
    <string name="store_address_default">Av. Senador Salgado Filho, 7733, Lagoa Nova, 59076-440</string>
    <string name="store_phone_default">(84) 3222-5586</string>
    <string name="store_name_default">Conveniência do Seu João 24h</string>
    <string name="open">Aberto</string>
    <string name="store_opentime_default"> Aberto 08-22h</string>
    <string name="product_name_default">Água mineral Indaiá</string>
    <string name="product_description_default">Garrafão de água mineral de 20 litros</string>
    <string name="product_price_default">19,99</string>
    <string name="search_store_hint">Buscar loja</string>
    <string name="wait_message_default">Carregando...</string>
    <string name="loading_stores_wait_message">Carregando lojas...</string>
    <string name="fail_load_stores">Falha ao carregar as lojas</string>
    <string name="total_label">Total:</string>
    <string name="conclude_order_label">Concluir</string>
    <string name="add_product_cart_message">Deseja adicionar o produto ao carrinho?</string>
    <string name="product_name_added_success">adicionado com sucesso</string>
    <string name="cart_item">Carrinho</string>
    <string name="signout_item">Sair</string>
    <string name="empty_cart_message">Carrinho vazio</string>
    <string name="home">Home</string>
    <string name="delete_order_label">Remover</string>
    <string name="search_products_order_label">Add + produtos</string>
    <string name="remove_product_cart_message">Deseja remover o produto do carrinho?</string>
    <string name="removed_success_product">Produto removido</string>
    <string name="add_product_cart_message_remove_current_order">Você está adicionando um produto de uma outra loja ao pedido atual. Adicionar esse produto acarretará na remoção dos produtos já adicionados. Deseja realmente adicionar o produto?</string>
    <string name="removing_order_message_wait">Removendo pedido...</string>
    <string name="adding_product_to_order_wait_message">Adicionando produto ao carrinho...</string>
    <string name="fail_to_add_product_to_cart">Erro ao adicionar produto ao carrinho</string>
    <string name="removing_product_from_order_wait_message">Removendo produto do carrinho...</string>
    <string name="fail_to_remove_product">Erro ao remover produto</string>

</resources>
