<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    >

    <TextView
        android:id="@+id/homeMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="15dp"
        android:drawableTop="@drawable/ic_home_s"
        android:drawablePadding="5dp"
        android:text="@string/home"
        />

    <TextView
        android:id="@+id/cartMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="15dp"
        android:drawableTop="@drawable/ic_shopping_cart_s"
        android:drawablePadding="5dp"
        android:text="@string/cart_item"
        android:onClick="loadCart"
        />

    <TextView
        android:id="@+id/userMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="15dp"
        android:drawableTop="@drawable/ic_user_s"
        android:drawablePadding="5dp"
        />

    <TextView
        android:id="@+id/logoutMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="15dp"
        android:drawableTop="@drawable/ic_sign_out_alt_small"
        android:drawablePadding="5dp"
        android:text="@string/logout"
        android:onClick="logout"
        />

</LinearLayout>